k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: cities
    name: cities
spec:
    type: LoadBalancer
    ports:
        -   port: 3000
            targetPort: 3000
            protocol: TCP
            name: http
    selector:
        app: cities
