k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: example-ingress
    namespace: kube-system
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        -   host: cities.info
            http:
                paths:
                    -   path: /cities
                        backend:
                            serviceName: cities
                            servicePort: 3000
